--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.6.2",
     "nestjs-i18n": "^10.4.9",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "sonarqube-scanner": "^4.2.2",
-    "swagger-ui-express": "^5.0.1"
+    "sonarqube-scanner": "^4.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -54,7 +54,6 @@
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
