--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "./coverage",
     "coverageReporters": [
       "text",
       "lcov",
