--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "sonarqube-scanner": "sonar-scanner",
     "docker:build": "docker build -t retrieve-countries .",
-    "docker:run": "docker run -p 3000:3000 retrieve-countries"
+    "docker:run": "docker run -p 3000:3000 retrieve-countries",
+    "ensure-indexes": "ts-node src/command/cli.ts ensure-indexes"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -32,16 +33,18 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.6.2",
+    "nest-commander": "^3.15.0",
     "nestjs-i18n": "^10.4.9",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sonarqube-scanner": "^4.2.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/inquirer": "^8.1.3",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
