--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,8 +11,8 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.token=${env.SONAR_TOKEN_RC}
 sonar.organization=${env.SONAR_ORGANIZATION}
 
-sonar.coverage.exclusions=src/resources/**,src/main.ts
+sonar.coverage.exclusions=src/resources/**,src/main.ts,src/command/cli.ts
 
-sonar.exclusions=src/resources/**,src/main.ts
+sonar.exclusions=src/resources/**,src/main.ts,src/command/cli.ts
 
 sonar.test.inclusions=test/**/*.spec.ts
