--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "ensure-indexes": "ts-node src/command/cli.ts ensure-indexes"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
+    "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.6.2",
@@ -43,6 +45,7 @@
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cache-manager": "^4.0.6",
     "@types/express": "^4.17.17",
     "@types/inquirer": "^8.1.3",
     "@types/jest": "^29.5.2",
