--- a/package.json
+++ b/package.json
@@ -65,6 +65,13 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
+  "resolutions": {
+    "path-to-regexp": "^6.3.0",
+    "body-parser": "^1.20.3",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.0",
+    "express": "^4.20.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
