--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
     "typescript": "^5.1.3"
   },
   "resolutions": {
+    "path-to-regexp": "3.3.0",
     "body-parser": "^1.20.3",
     "send": "^0.19.0",
-    "serve-static": "^1.16.0"
+    "serve-static": "^1.16.0",
+    "express": "^4.20.0"
   },
   "jest": {
     "moduleFileExtensions": [
